Fixed the data tooltip overlapping

--- a/frontend/app/styles/partials/create-badge.scss
+++ b/frontend/app/styles/partials/create-badge.scss
@@ -35,6 +35,10 @@
   display: none !important;
 }
 
+.tooltip{
+  z-index: 2;
+}
+
 .font_type{
   margin: 0 30px 0 -35px;
 }
